--- a/templates/index.html
+++ b/templates/index.html
@@ -289,6 +289,10 @@
             {% endif %}
 
         </div>
+        <a href="{{ url_for('portal_usinas') }}" class="btn btn-primary">
+        Ver todas as usinas no Solis
+        </a>
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
