--- a/templates/index.html
+++ b/templates/index.html
@@ -111,11 +111,26 @@
                                             <h5 class="card-title">Consulta de Geração</h5>
                                             <p class="card-text">Consultar geração detalhada por data.</p>
                                         </div>
-                                        <a href="{{ url_for('consulta') }}" class="btn btn-outline-primary mt-3">Acessar</a>
+                                        <a href="{{ url_for('portal_usinas') }}" class="btn btn-outline-primary mt-3">Acessar</a>
                                     </div>
                                 </div>
                             </div>
 
+                            <!-- Solis -->
+                            <div class="col">
+                                <div class="card card-custom shadow-sm h-100">
+                                    <div class="card-body d-flex flex-column justify-content-between">
+                                        <div>
+                                            <div class="mb-3">
+                                                <i class="card-icon bi bi-file-earmark-text-fill"></i>
+                                            </div>
+                                            <h5 class="card-title">Usinas Solis</h5>
+                                            <p class="card-text">Vincular Usinas do portal da Solis</p>
+                                        </div>
+                                        <a href="{{ url_for('portal_usinas') }}" class="btn btn-outline-primary mt-3">Acessar</a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -186,7 +201,7 @@
                                         <a href="{{ url_for('faturamento') }}" class="btn btn-outline-primary mt-3">Acessar</a>
                                     </div>
                                 </div>
-                            </div>
+                            </div>                            
 
                         </div>
                     </div>
@@ -288,10 +303,7 @@
             </div>
             {% endif %}
 
-        </div>
-        <a href="{{ url_for('portal_usinas') }}" class="btn btn-primary">
-        Ver todas as usinas no Solis
-        </a>
+        </div>        
 
     </div>
 
