--- a/templates/index.html
+++ b/templates/index.html
@@ -111,7 +111,7 @@
                                             <h5 class="card-title">Consulta de Geração</h5>
                                             <p class="card-text">Consultar geração detalhada por data.</p>
                                         </div>
-                                        <a href="{{ url_for('portal_usinas') }}" class="btn btn-outline-primary mt-3">Acessar</a>
+                                        <a href="{{ url_for('consulta') }}" class="btn btn-outline-primary mt-3">Acessar</a>
                                     </div>
                                 </div>
                             </div>
