Melhora a função listar_todos_inversores para carregar todos os registros

--- a/templates/producao_mensal.html
+++ b/templates/producao_mensal.html
@@ -196,7 +196,7 @@
                         {% set liquido = faturamento * 0.80 %}
                         <tr>
                             <td>{{ item.data }}</td>
-                            <td>{{ item.energia_kwh }}</td>
+                            <td>{{'%.2f' | format(item.energia_kwh) }}</td>
                             <td>{{ faturamento|formato_brasileiro }}</td>
                             <td>{{ liquido|formato_brasileiro }}</td>
                         </tr>
