--- a/templates/consulta.html
+++ b/templates/consulta.html
@@ -56,7 +56,7 @@
                         {% else %} text-danger 
                         {% endif %}
                     ">
-                        {{ item.energia_kwh }}
+                        {{'%.2f' | format(item.energia_kwh) }}
                     </td>
                 </tr>
                 {% endfor %}
