Adcionar novos botões

--- a/templates/rateios.html
+++ b/templates/rateios.html
@@ -59,6 +59,7 @@
             <li class="list-group-item text-muted">Nenhum rateio cadastrado.</li>
         {% endfor %}
     </ul>
+    <a href="/" class="btn btn-secondary mt-3">Voltar</a>
 </div>
 
 <script>
@@ -95,5 +96,6 @@ function carregarClientes() {
         });
 }
 </script>
+
 </body>
 </html>
