--- a/templates/upload_boleto.html
+++ b/templates/upload_boleto.html
@@ -36,6 +36,7 @@
             <button class="btn btn-success btn-lg" type="submit">Enviar Boleto</button>
         </div>
     </form>
+    <a href="/" class="btn btn-secondary mt-3">Voltar</a>
 </div>
 
 </body>
