--- a/templates/producao_mensal.html
+++ b/templates/producao_mensal.html
@@ -211,6 +211,11 @@
                 </tfoot>
             </table>
         </div>
+        <div class="text-center mt-4">
+        <a href="{{ url_for('index') }}" class="btn btn-secondary">
+            <i class="bi bi-house-door-fill"></i> Voltar para o Início
+        </a>
+    </div>
     </div> <!-- fim container -->
 
     <!-- ===== Script de gráfico e atualização automática ===== -->
