--- a/templates/cadastrar_usina.html
+++ b/templates/cadastrar_usina.html
@@ -91,7 +91,7 @@
     <div class="container">
         <h2>Cadastrar Nova Usina</h2>
 
-        <form method="POST">
+        <form method="POST" enctype="multipart/form-data">
             <label for="cc">Código CC:</label>
             <input type="text" name="cc" id="cc" required>
 
@@ -101,6 +101,8 @@
             <label for="potencia">Potência da Usina (kW):</label>
             <input type="number" step="0.01" name="potencia" id="potencia" required>
 
+            <label for="logo">Logo da Usina (imagem):</label>
+            <input type="file" name="logo" id="logo" accept="image/*">
 
             <label>Previsão Mensal por Mês (kWh):</label>
             <div class="grid">
@@ -120,7 +122,11 @@
             <button type="submit">Cadastrar Usina</button>
         </form>
 
+
         <div class="footer">
+            {% if usina and usina.logo_url %}
+                <img src="{{ url_for('servir_logo', nome_arquivo=usina.logo_url) if env == 'production' else url_for('static', filename='logos/' + usina.logo_url) }}" style="max-height: 100px;">
+            {% endif %}
             <a href="/" class="btn btn-outline-secondary">Voltar</a> |
             <a href="/usinas">Usinas Cadastradas</a> |
             <a href="/listar_geracoes">Editar Geração</a>
