--- a/templates/producao_mensal.html
+++ b/templates/producao_mensal.html
@@ -77,7 +77,7 @@
                     <div class="card-body d-flex align-items-center">
                         <i class="bi bi-calendar fs-1 me-3"></i>
                         <div>
-                            <h5 class="card-title text-secondary">Geração Anual</h5>
+                            <h5 class="card-title text-secondary">Geração Anual Atual</h5>
                             <p class="card-text fs-4">{{ ano_geracao_total }} kWh</p>
                         </div>
                     </div>
@@ -126,7 +126,7 @@
                     <div class="card-body d-flex align-items-center">
                         <i class="bi bi-lightning-charge text-warning fs-1 me-3"></i>
                         <div>
-                            <h5 class="card-title text-warning">Geração Total</h5>
+                            <h5 class="card-title text-warning">Geração Total Atual</h5>
                             <p class="card-text fs-4">{{ '%.2f' | format(totais_faturamento.geracao_total) }} kWh</p>
                         </div>
                     </div>
