--- a/templates/producao_mensal.html
+++ b/templates/producao_mensal.html
@@ -69,7 +69,7 @@
             <div class="card border-success shadow-sm">
                 <div class="card-body">
                     <h6 class="text-success">Geração Anual</h6>
-                    <p class="fs-5">{{ ano_geracao_total }} kWh</p>
+                    <p class="fs-5">{{ "{:,}".format(ano_geracao_total|round(2)).replace(",", "X").replace(".", ",").replace("X", ".") }} kWh</p>
                 </div>
             </div>
         </div>
@@ -77,7 +77,7 @@
             <div class="card border-primary shadow-sm">
                 <div class="card-body">
                     <h6 class="text-primary">Geração Mensal</h6>
-                    <p class="fs-5">{{ soma_total | round(2) }} kWh</p>
+                    <p class="fs-5">{{ "{:,}".format(soma_total|round(2)).replace(",", "X").replace(".", ",").replace("X", ".") }} kWh</p>
                 </div>
             </div>
         </div>
@@ -85,7 +85,7 @@
             <div class="card border-warning shadow-sm">
                 <div class="card-body">
                     <h6 class="text-warning">Previsão Mensal</h6>
-                    <p class="fs-5">{{ previsao_mensal }} kWh</p>
+                    <p class="fs-5">{{ "{:,}".format(previsao_mensal|round(2)).replace(",", "X").replace(".", ",").replace("X", ".") }} kWh</p>
                 </div>
             </div>
         </div>
@@ -122,7 +122,7 @@
                 {% set media_diaria = (soma_total / hoje) if hoje > 0 else 0 %}
                 {% set estimativa_final = media_diaria * dias_mes %}
 
-                <p><strong>Estimativa de geração até o fim do mês:</strong> {{ estimativa_final | round(2) }} kWh</p>
+                <p><strong>Estimativa de geração até o fim do mês:</strong> {{ "{:,}".format(estimativa_final | round(2)).replace(",", "X").replace(".", ",").replace("X", ".") }} kWh</p>
 
                 <p><strong>Status:</strong>
                 {% if estimativa_final >= previsao_mensal %}
