--- a/templates/index.html
+++ b/templates/index.html
@@ -258,6 +258,34 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="col">
+                                <div class="card card-custom shadow-sm h-100">
+                                    <div class="card-body d-flex flex-column justify-content-between">
+                                        <div>
+                                            <div class="mb-3">
+                                                <i class="card-icon bi bi-archive-fill"></i>
+                                            </div>
+                                            <h5 class="card-title">Cadastrar Despesas</h5>
+                                            <p class="card-text">Inserir despesas das usinas.</p>
+                                        </div>
+                                        <a href="{{ url_for('registrar_despesa') }}" class="btn btn-outline-primary mt-3">Acessar</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card card-custom shadow-sm h-100">
+                                    <div class="card-body d-flex flex-column justify-content-between">
+                                        <div>
+                                            <div class="mb-3">
+                                                <i class="card-icon bi bi-file-earmark-text-fill"></i>
+                                            </div>
+                                            <h5 class="card-title">Faturamento</h5>
+                                            <p class="card-text">Consultar o balancete.</p>
+                                        </div>
+                                        <a href="{{ url_for('financeiro') }}" class="btn btn-outline-primary mt-3">Acessar</a>
+                                    </div>
+                                </div>
+                            </div> 
 
                         </div>
                     </div>
