--- a/templates/registrar_despesa.html
+++ b/templates/registrar_despesa.html
@@ -62,7 +62,13 @@
 
         <div class="text-center">
             <button type="submit" class="btn btn-success">Salvar Despesa</button>
+            <div class="text-center mt-4">
+                <a href="{{ url_for('index') }}" class="btn btn-secondary">
+                    <i class="bi bi-house-door-fill"></i> Voltar para o Início
+                </a>
+            </div>
         </div>
+        
     </form>
 </div>
 
