--- a/templates/cadastrar_usuario.html
+++ b/templates/cadastrar_usuario.html
@@ -35,6 +35,10 @@
                 <input class="form-check-input" type="checkbox" name="pode_cadastrar_fatura" id="fatura">
                 <label class="form-check-label" for="fatura">Pode cadastrar fatura</label>
             </div>
+            <div class="form-check mb-3">
+                <input class="form-check-input" type="checkbox" name="pode_acessar_financeiro" id="financeiro">
+                <label class="form-check-label" for="financeiro">Acessar financeiro</label>
+            </div>
             <div class="d-flex justify-content-between">
                 <div>
                     <a href="/" class="btn btn-secondary">Voltar ao Início</a>
