--- a/templates/editar_usuario.html
+++ b/templates/editar_usuario.html
@@ -38,6 +38,10 @@
                     <input class="form-check-input" type="checkbox" name="pode_cadastrar_fatura" id="fatura" {% if usuario.pode_cadastrar_fatura %}checked{% endif %}>
                     <label class="form-check-label" for="fatura">Cadastrar Fatura</label>
                 </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" name="pode_acessar_financeiro" id="financeiro" {% if usuario.pode_acessar_financeiro %}checked{% endif %}>
+                    <label class="form-check-label" for="financeiro">Acessar Financeiro</label>
+                </div>
             </div>
             <div class="d-flex justify-content-between">
                 <a href="{{ url_for('listar_usuarios') }}" class="btn btn-secondary">Voltar</a>
