Atualização do relatório

--- a/templates/relatorio_fatura.html
+++ b/templates/relatorio_fatura.html
@@ -221,8 +221,8 @@
     {% if ficha_compensacao_path %}
         <hr class="my-5">
         <h5 class="text-center text-secondary">Ficha de Compensação</h5>
-        <div class="text-center">
-            <img src="{{ ficha_compensacao_path }}" style="width: 100%; max-width: 600px;" alt="Ficha de Compensação">
+        <div style="display: flex; justify-content: center; margin-top: 20px;">
+            <img src="{{ ficha_compensacao_path }}" style="max-width: 100%; width: auto;" alt="Ficha de Compensação">
         </div>
     {% endif %}
 </div>
