--- a/templates/clientes.html
+++ b/templates/clientes.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <title>Cadastro de Clientes</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
-</head>
+{% extends 'base.html' %}
+
+{% block title %}Cadastrar Geração Diária{% endblock %}
+
+{% block content %}
 <body class="bg-light">
 <div class="container mt-5 p-4 bg-white rounded shadow">
 
@@ -140,3 +137,4 @@
 </script>
 </body>
 </html>
+{% endblock %}
