--- a/templates/faturamento.html
+++ b/templates/faturamento.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <title>Faturamento Mensal</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body class="bg-light">
+{% extends 'base.html' %}
+
+{% block title %}Cadastrar Geração Diária{% endblock %}
+
+{% block content %}
 <div class="container mt-5 p-4 bg-white rounded shadow">
     <h2 class="mb-4 text-primary text-center">Faturamento Mensal</h2>
 
@@ -185,6 +181,4 @@ function preencherAutomatico() {
         <i class="bi bi-file-text"></i> Ver Faturas
     </a>
 </div>
-
-</body>
-</html>
+{% endblock %}
