--- a/templates/rateios.html
+++ b/templates/rateios.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <title>Rateios</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body class="bg-light">
+{% extends 'base.html' %}
+
+{% block title %}Cadastrar Geração Diária{% endblock %}
+
+{% block content %}
 <div class="container mt-5 p-4 bg-white rounded shadow">
     <h2 class="mb-4 text-primary text-center">Configuração de Rateios</h2>
 
@@ -96,6 +93,4 @@ function carregarClientes() {
         });
 }
 </script>
-
-</body>
-</html>
+{% endblock %}
