Inclusão de relatórios

--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,12 @@
     {% block content %}{% endblock %}
 </div>
 
+<!-- JS geral do sistema -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+<!-- Bloco para os gráficos dos templates filhos -->
 {% block extra_js %}{% endblock %}
+
 </body>
 </html>
