--- a/templates/listar_faturas.html
+++ b/templates/listar_faturas.html
@@ -118,9 +118,7 @@
 
     <!-- ✅ Voltar ao início no final -->
     <div class="text-center mt-4">
-        <a href="{{ url_for('index') }}" class="btn btn-secondary">
-            <i class="bi bi-house-door-fill"></i> Voltar para o Início
-        </a>
+        <a href="{{ url_for('index') }}?aba=financeiro" class="btn btn-secondary">Voltar</a>
     </div>
 
 </div>
