--- a/templates/upload_boleto.html
+++ b/templates/upload_boleto.html
@@ -84,7 +84,9 @@
         </div>
     </form>
 
-    <a href="/" class="btn btn-secondary mt-3">Voltar</a>
+    <div class="text-center mt-4">
+        <a href="{{ url_for('index') }}?aba=financeiro" class="btn btn-secondary">Voltar</a>
+    </div>
 </div>
 
 <script>
