--- a/templates/registrar_despesa.html
+++ b/templates/registrar_despesa.html
@@ -65,7 +65,7 @@
     </form>
 
     <div class="text-center mt-4">
-        <a href="{{ url_for('index') }}" class="btn btn-secondary">Voltar para o Início</a>
+        <a href="{{ url_for('index') }}?aba=financeiro" class="btn btn-secondary">Voltar</a>
     </div>
 </div>
 {% endblock %}
